log
Sat, Mar 22, 2025  8:58:48 PM: 
In file included from test.c:5:0:
exercises.c: In function 'main':
exercises.c:149:10: error: unused variable 'lista' [-Werror=unused-variable]
    List *lista = crea_lista();
          ^~~~~
test.c: At top level:
test.c:253:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:147:5: note: previous definition of 'main' was here
 int main()
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
81d57fe
Sat, Mar 22, 2025  9:00:56 PM: 
 exercises.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  4|1
total_score: 50/70
1ba30d6
Sat, Mar 22, 2025  9:06:45 PM: 
 tests:  3|2
total_score: 30/70
4330d99
Sat, Mar 22, 2025  9:10:54 PM: 
 exercises.c | 49 ++++++++++++++++++++-----------------------------
 1 file changed, 20 insertions(+), 29 deletions(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
a558bb1
